--- a/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
+++ b/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
@@ -19,11 +19,11 @@
 # supports automated building and deploying.
 # 
 
-steps:
+#steps:
 # Build the image that encapsulates the pipeline.
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/$_TFX_IMAGE_NAME:$TAG_NAME', '.']
-  dir: $_PIPELINE_FOLDER
+#- name: 'gcr.io/cloud-builders/docker'
+#  args: ['build', '-t', 'gcr.io/$PROJECT_ID/$_TFX_IMAGE_NAME:$TAG_NAME', '.']
+#  dir: $_PIPELINE_FOLDER
 
   
 - name: 'gcr.io/$PROJECT_ID/tfx-cli'
