--- a/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
+++ b/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
@@ -1,4 +1,10 @@
-steps:  
+steps:
+ Build the image that encapsulates the pipeline.
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/$_TFX_IMAGE_NAME:$TAG_NAME', '.']
+  dir: $_PIPELINE_FOLDER
+
+  
 - name: 'gcr.io/$PROJECT_ID/tfx-cli'
   args: ['pipeline', 'create', '--engine', 'kubeflow', '--pipeline_path', '$_PIPELINE_DSL', '--endpoint', '$_ENDPOINT']
   env: 
@@ -17,3 +23,5 @@ steps:
   dir: $_PIPELINE_FOLDER
 
 
+# Push the custom image to Container Registry 
+images: ['gcr.io/$PROJECT_ID/$_TFX_IMAGE_NAME:$TAG_NAME']
