--- a/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
+++ b/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
  Build the image that encapsulates the pipeline.
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/$_TFX_IMAGE_NAME:$TAG_NAME', '.']
+  args: ['build', '-t', 'gcr.io/qwiklabs-gcp-00-9f6394bde083/$_TFX_IMAGE_NAME:$TAG_NAME', '.']
   dir: $_PIPELINE_FOLDER
 
   
@@ -9,7 +9,7 @@ steps:
   args: ['pipeline', 'create', '--engine', 'kubeflow', '--pipeline_path', '$_PIPELINE_DSL', '--endpoint', '$_ENDPOINT']
   env: 
   - 'GCP_REGION=$_GCP_REGION'  
-  - 'PROJECT_ID=$PROJECT_ID'
+  - 'PROJECT_ID=qwiklabs-gcp-00-9f6394bde083'
   - 'PIPELINE_NAME=${_PIPELINE_NAME}-${TAG_NAME}'
   - 'MODEL_NAME=$_MODEL_NAME'  
   - 'ARTIFACT_STORE_URI=$_ARTIFACT_STORE_URI'
