--- a/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
+++ b/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
@@ -24,4 +24,4 @@ steps:
 
 
 # Push the custom image to Container Registry 
-images: ['gcr.io/$PROJECT_ID/$_TFX_IMAGE_NAME:$TAG_NAME']
+images: ['gcr.io/qwiklabs-gcp-00-9f6394bde083/$_TFX_IMAGE_NAME:$TAG_NAME']
